samples/_failures_safe/1761289831_396c6a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a39c85a8.c: In function ‘main’:
./samples/SAFE/__tmp_a39c85a8.c:126:13: error: expected expression at end of input
  126 |             for (int i = 0; i <
      |             ^~~
./samples/SAFE/__tmp_a39c85a8.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a39c85a8.c:126:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a39c85a8.c:126:13: error: expected declaration or statement at end of input
